generate output html

--- a/output/output.html
+++ b/output/output.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>HTML Email编写指南</title>
+        <title>一封暖暖的邮件</title>
         <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href='/stylesheets/style.css' />
     </head>
@@ -68,4 +68,4 @@
             <span style="color:#b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
-</html>
+</html>>
