generate output html

--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2025 / 11 / 15</span>
+            <span style="font-size: 24px; color: #DD4949;">2025 / 11 / 16</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,10 +20,12 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">这个世界并不重要，谁承认这一点，谁就赢得自由。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 11 / 15</span>
-            <img src="http://image.wufazhuce.com/FiJCW82mIGc89Fk6fAA5QylO9zXV" style="width: 100%; margin-top: 10px;" alt="">
-            <span style="color: #b0b0b0; font-size:13px">摄影 </span>
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">青春期的少年，鲁莽又真诚，总爱表现出无所畏惧的样子。心里跌宕起伏，脸上却强装镇定。那些说不清的喜欢、没来由的愤怒、和整个世界小小地作对，其实都是在慌乱地练习如何成为一个大人。
+
+本周，ONE与你一同关注少年的故事。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 11 / 16</span>
+            <img src="http://image.wufazhuce.com/FkW829r2cUxuT9AKBbrJ1OEwzrrw" style="width: 100%; margin-top: 10px;" alt="">
+            <span style="color: #b0b0b0; font-size:13px">周日推荐 </span>
         </div>
     </body>
 </html>
