--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2025 / 11 / 17</span>
+            <span style="font-size: 24px; color: #DD4949;">2025 / 11 / 18</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,9 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">人们一旦把一件事情太当真了，那么，信任就会把这件事推向荒唐的地步。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 11 / 17</span>
-            <img src="http://image.wufazhuce.com/FlSPtF66nwfsPkl9eZPOKFebhWVz" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">人们无论承受怎样的痛苦，无论遭遇怎样的悲惨经历，无论如何不自由，都会在命运的夹缝中求生，接受命运给予的一切。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 11 / 18</span>
+            <img src="http://image.wufazhuce.com/FrVW8Ehq8PY3IVmbCeZZJrEVPyFd" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
