--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2025 / 11 / 21</span>
+            <span style="font-size: 24px; color: #DD4949;">2025 / 11 / 22</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,9 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">可我身边没有别人，我没法向别人诉说我的心事，没有人指点我、提醒我，我毫无阅历，毫无思想准备：我一头栽进我的命运，就像跌进了一个深渊。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 11 / 21</span>
-            <img src="http://image.wufazhuce.com/Fn0XFRVBBuCp6_GWPfZpr60D1Bgi" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">怀疑容易成瘾，一旦冒出头，往往像积乱云扩散般，以惊人的速度蔓延开来。对方的一举一动，无论再微小的细节，都变成浓得化不开的迷雾挥散不去。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 11 / 22</span>
+            <img src="http://image.wufazhuce.com/FiWwjxz4Cu1wM0EaFHPoH1yABuW6" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
