--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2025 / 11 / 25</span>
+            <span style="font-size: 24px; color: #DD4949;">2025 / 11 / 26</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,9 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">我不理解所有这一切有什么意义，我被放在了错误的位置，我是个疲惫不堪的人类样本，一颗卵石，被机缘冲到了一片陌生的、更安全的海岸。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 11 / 25</span>
-            <img src="http://image.wufazhuce.com/Fn6r4aFhsD6ABhuccrv9VwydZyaf" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">人在世间，有些事发生了，虽说不知原委，却被人看进眼里，听进耳朵，而后挂到嘴边，趁着早中晚三餐讲出来，论几句，引得满桌或笑或怒，那些事也就有滋有味，成了道磨牙下饭的菜。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 11 / 26</span>
+            <img src="http://image.wufazhuce.com/ForgHbasr7QQgGdvHwgoRbMb4yYJ" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
