--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2025 / 11 / 30</span>
+            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 01</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,12 +20,10 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">情绪是体内的天气，瞬息万变。它不讲逻辑，却能轻易主宰我们的判断与航向。我们总被这股无形之力推着走，在起伏中品尝激动、懊悔与成长的滋味。
-
-本周，ONE将与你一同走进被情绪牵动的故事。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 11 / 30</span>
-            <img src="http://image.wufazhuce.com/Fqh2qrxFdHgsBvXwmrmWtzYvQPQf" style="width: 100%; margin-top: 10px;" alt="">
-            <span style="color: #b0b0b0; font-size:13px">周日推荐 </span>
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">今天这么好的天气，正该上那儿去。或者，上哪儿去都行。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 01</span>
+            <img src="http://image.wufazhuce.com/Fm4mTb0g1XPvPXuil7_yYVahoE0R" style="width: 100%; margin-top: 10px;" alt="">
+            <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
 </html>
