--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 02</span>
+            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 03</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,9 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">总之都是些微不足道的小事，就像平时飘散在周围空气中的微尘，绝大多数人天天都吸入他们，身体并没受影响，心情也并没变坏，可是它们毕竟是有害健康的。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 02</span>
-            <img src="http://image.wufazhuce.com/FhtBhgrm44S3jeU4zZnujJxg4Abw" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">人啊，有着出乎意料认真的一面，也有出乎意料不认真的一面，而且对他人的命运感受迟钝，那种迟钝只有在与自己的命运相关时才会敏感起来。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 03</span>
+            <img src="http://image.wufazhuce.com/FkT9hfEzfvWQG-nvac1i17J-Mciq" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
