--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 04</span>
+            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 05</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,9 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">所谓生活，华丽、宏伟、高尚永远遥不可及，卑鄙、肮脏疲倦却总是持续不断。就像是一场没有尽头的跨栏比赛，自始至终无法逃避。虽然偶尔会走运，品尝到一点轻松与成就感，仔细想来却也只是水湾里漂来漂去、终究会破碎的泡沫罢了。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 04</span>
-            <img src="http://image.wufazhuce.com/Fh8bU6nINqv4YbejNTklGARjtvzl" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">如果一个人生活得不对头，他可以欺骗自己，对自己充满灾难的处境视而不见，——这对于那个人来说既是一条出路，也是一种惩罚。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 05</span>
+            <img src="http://image.wufazhuce.com/Fqcf5pYQk05Ghi0jkP_eCJGMHg0o" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
