--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 08</span>
+            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 09</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,9 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">生活只是一场无情的、无休止的搏斗，倘若谁愿意无愧于做人，就得不停地与一队队无形的敌人进行殊死的搏斗。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 08</span>
-            <img src="http://image.wufazhuce.com/FovGlGPUekqCx1So1ni4eejTe-iz" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">你们这些诗人笔下的爱情是一场巨大的骗局：熨贴的诗句犹如两张紧贴在一起的嘴唇，落到我们头上的爱情却似乎从来没有那么美好。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 09</span>
+            <img src="http://image.wufazhuce.com/Fp9OvrF_Psiolf_9yyqLsFYIZArL" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
