--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 10</span>
+            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 11</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,9 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">这实际上不是我自己决定的。是命运强加给我的。同我的工作一样，同我身上发生的一切事一样。说来不是我做事，而是事做我。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 10</span>
-            <img src="http://image.wufazhuce.com/FhkzXB5sOqasZMkcIBjVubz8hss8" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">我早就发现一个人思想僵化以后，最好的办法就是让他死死抱住自己的成见不放。当有人自以为有什么逆耳的忠言要奉劝你时，最好的办法就是向他说一声“晚安，再见”。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 11</span>
+            <img src="http://image.wufazhuce.com/FhgfDaxOvxB2Q-vtC6ltW8WPs5S2" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
