--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 14</span>
+            <span style="font-size: 24px; color: #DD4949;">2025 / 12 / 15</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,12 +20,10 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">冬天让飘忽的心事落地，人往往在年关盘点一年的得失。寒冷把世界调成静音，反而让我们听见自己最真实的心跳。那些被冻住的期待、呵气成雾的倾诉，都可以在这个季节获得回应。
-
-本周，ONE与你一同关注冬天的故事。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 14</span>
-            <img src="http://image.wufazhuce.com/Fr2ENaqHhhUkukhbQkPnAM_Lydnh" style="width: 100%; margin-top: 10px;" alt="">
-            <span style="color: #b0b0b0; font-size:13px">周日推荐 </span>
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">不要怕，无论什么困难的事，只要硬着头皮去做，就闯过去了。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2025 / 12 / 15</span>
+            <img src="http://image.wufazhuce.com/Fiep3U9tMBzpQI3AezWyHzQjkeVm" style="width: 100%; margin-top: 10px;" alt="">
+            <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
 </html>
