generate output html

--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2026 / 01 / 05</span>
+            <span style="font-size: 24px; color: #DD4949;">2026 / 01 / 06</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,9 +20,9 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">你从阳台上看着人们在你鼻子下方赶路，然后远去，远去，远去……直到变成地平线上的省略号。 你心想这或许就是人生：把自己变小，融入背景。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 01 / 05</span>
-            <img src="http://image.wufazhuce.com/Fs4uWL1MBdj1IDu_gFJX7obeqNhR" style="width: 100%; margin-top: 10px;" alt="">
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">当某物或某人能帮忙促成某个目的时，你伸手去用便是。你要么利用他们，要么冒着被他们利用的风险。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 01 / 06</span>
+            <img src="http://image.wufazhuce.com/FnV0PX4siaYzyJ8jYOhNPxRHM-W4" style="width: 100%; margin-top: 10px;" alt="">
             <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
