generate output html

--- a/output/output.html
+++ b/output/output.html
@@ -10,7 +10,7 @@
     <body style="margin:0;padding:0;">
         <div style="width:100%; margin:40px auto; font-size:20px; color: #5f5e5e; text-align:center">
             <span>今日: </span>
-            <span style="font-size: 24px; color: #DD4949;">2026 / 01 / 25</span>
+            <span style="font-size: 24px; color: #DD4949;">2026 / 01 / 26</span>
         </div>
         <div style="width:100%; margin:0 auto; color:#5f5e5e;text-align:center">
             <span style="display: block; color:#676767; font-size:20px"></span>
@@ -20,12 +20,10 @@
         <div style="text-align: center; margin: 35px 0;">
             <span style="display:block; margin-top: 55px; color: #676767; font-size:15px">ONE · 一个</span>
             <br/>
-            <div style="margin:10px auth; width:85%; color:#5f5e5e">影视圈是造梦的工厂，一句台词可以NG无数次，但人生没有重来的机会。有人在台前活成角色的影子，有人在幕后把剧本打磨成另一重现实。当摄像机停止转动，那些未说完的对白、未入镜的情绪，才是这个行业最真实的底片。
-
-本周，ONE与你一同走进镜头两侧，关注台前幕后的故事。</div>
-            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 01 / 25</span>
-            <img src="http://image.wufazhuce.com/FhxIdyqKtIypN-47WlnsXSM6UQo7" style="width: 100%; margin-top: 10px;" alt="">
-            <span style="color: #b0b0b0; font-size:13px">周日推荐 </span>
+            <div style="margin:10px auth; width:85%; color:#5f5e5e">早上七点，还没填饱肚子，浑身冰凉，就得去上班。</div>
+            <span style="display:block; margin-top: 25px; color: #9d9d9d; font-size:22px">2026 / 01 / 26</span>
+            <img src="http://image.wufazhuce.com/FrQ6yT_qHbIdQuNy0i4YcsR-Didk" style="width: 100%; margin-top: 10px;" alt="">
+            <span style="color: #b0b0b0; font-size:13px">摄影 </span>
         </div>
     </body>
 </html>
